# graphlib

./: Astarm.txt  Astconf.conf  CMakeLists.txt  Doxyfile  README.md  documentation.rar  printconfig.conf  structs.h  variables.cmake
free/: freefoo.h  graphfree.cpp
graph/: graph.h  graphconstruction.cpp  graphinfo.cpp  graphprintandstringperdomance.cpp  graphprivatecalculators.cpp  graphpublic.cpp
graphics/: circles_and_text.cpp  drawable_shapes.h  free_and_shape.cpp  functions_interfaces.h  other_shapes.cpp
routers/: deikstraprinter.cpp  deikstrarouter.cpp  routers.h
src/: main.cpp  readme.h
src/AStar/: astar.cpp  astardeclare.h  astarfoo.cpp  astarmap.cpp  astarsupport.h  designastar.cpp  structs.h
src/achiveabler/: achiveabler.cpp  achiveabler.h
src/console_printers/: deikstra_printer.cpp  deikstra_printer.h  graph_achive_border.cpp  graph_achive_border.h
src/free/: freefoo.h  graphfree.cpp  structs.h
src/graph/: graph.cpp  graph.h
src/graphics/: def_configurator.cpp  def_configurator.h  drawable_shapes.h  free_and_shape.cpp  functions_interfaces.h  shape_modificators.h
src/routers/: deikstrarouter.cpp  deikstrarouter.h  floydwarshall.cpp  floydwarshall.h
src/svg_printers/: graph_printer.cpp  svg_printers.h
svg_printers/: def_configurator.cpp  def_configurator.h  graph_printer.cpp  shape_modificators.cpp  shape_modificators.h  svg_printers.h
